--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,14 @@ footer, footer p, footer a, .footer-bottom {
 }
 
 button {
-  border-radius: 15px;
-  background-color: white;
+  border-radius: 30px;
+  background-color: rgb(255, 255, 255);
   color: black;
-  padding: 5px;
+  padding:10px 20px;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: rgb(186, 0, 0);
+  transition-duration: 500ms;
 }
