--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,9 @@ button:hover{
   background-color: rgb(186, 0, 0);
   transition-duration: 500ms;
 }
+
+.skillItem {
+  margin-right: 25px;
+  margin-left: 25px;
+
+}
